<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="25sp " />
    <Button
        android:id="@+id/ButtonStart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />
    <Button
        android:id="@+id/ButtonSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />
    <Button
        android:id="@+id/ButtonAbout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about" />
    <Button
        android:id="@+id/ButtonExit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit" />
    

</LinearLayout>